# isotropic-remeshing

./: .gitignore  README.md  laplacian_smoothing.py  test.py
data/: bunny_remeshed_1000.npz
mesh_utils/: CMakeLists.txt  setup.py
mesh_utils/src/: main.cpp
pygeogram/: CMakeLists.txt  setup.py
pygeogram/src/: main.cpp
